# vhbb

./: .gitignore  CMakeLists.txt  CNAME  Makefile  Makefile.mak  README.md  VitaHBBrowser.elf  VitaHBBrowser.velf  VitaHBBrowser.vpk  azure-pipelines.yml  index.html  license.txt  param.sfo
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/: .gitignore  homebrews.yml  rinn.yml
release/: version.yml
sce_sys/livearea/contents/: template.xml
src/: AsyncTexture.cpp  AsyncTexture.h  CancelHandler.cpp  CancelHandler.h  Overclock.cpp  Overclock.h  ThreadPool.h  activity.cpp  activity.h  boot.c  boot.h  concurrency.cpp  concurrency.h  ctrls.h  database.cpp  database.h  database_load.h  date.cpp  date.h  debug.c  debug.cpp  debug.h  download_file.c  download_file.h  draw_main.h  fetch_load_icons_thread.cpp  fetch_load_icons_thread.h  filesystem.cpp  filesystem.h  font.cpp  font.h  fontDefault.c  global_include.h  homebrew.cpp  homebrew.h  homebrewDownload.cpp  homebrewDownload.h  homebrewInfo.cpp  homebrewInfo.h  homebrewRelease.cpp  (+56 more)
src/Graphic/Geometry/: Point.h  Rectangle.h
src/Views/: IMEView.cpp  IMEView.h  View.cpp  View.h  background.c  background.cpp  background.h  commonDialog.h  dialogView.cpp  dialogView.h  mainView.cpp  mainView.h  splash.cpp  splash.h  statusBar.c  statusBar.cpp  statusBar.h
src/Views/CategoryView/: categoryView.c  categoryView.cpp  categoryView.h
src/Views/Dialogs/: MessageDialog.cpp  MessageDialog.h
src/Views/HomebrewView/: homebrewView.cpp  homebrewView.h
src/Views/ListView/: listItem.c  listItem.cpp  listItem.h  listView.c  listView.cpp  listView.h  searchView.cpp  searchView.h
src/Views/ProgressView/: progressView.cpp  progressView.h
src/api/: api.c  api.h  homebrew.h  json.c  json.h
src/font/: fontDefault.c
src/minizip/: ioapi.c  ioapi.h  unzip.c  unzip.h  zip.c  zip.h
src/vitaAudio/: vitaAudio.c  vitaAudio.h
src/vitaAudio/buffer/: buffer.c  buffer.h
src/vitaAudio/def/: definitions.h
src/vitaAudio/ogg/: common.h  ogg.h
src/vitaAudio/ogg/api/: close.c  info.c  open-buffer.c  open-callbacks.c  open-file.c  read-float.c  read-int16.c  seek-tell.c  version.c
src/vitaAudio/ogg/decode/: common.h  crc32.c  crc32.h  decode.c  decode.h  inlines.h  io.c  io.h  packet.c  packet.h  seek.c  setup.c  setup.h  stb_vorbis.c
src/vitaAudio/ogg/util/: decode-frame.c  decode-frame.h  float-to-int16.c  float-to-int16.h  memory.c  memory.h
src/vitaAudio/wav/: wav.c  wav.h
src/vpk_install/: Readme.md  archive.c  archive.h  file.c  file.h  vpk_install.c  vpk_install.h
src/vpk_install/sha1/: sha1.c
src_updater/: CMakeLists.txt  debug.cpp  debug.h  updater.cpp
tools/: dummy vhbb example.txt  version_bin_creator.sh
website/: contact.html  contact.php
website/css/: bootstrap.min.css  theme.css
website/font-awesome/css/: font-awesome.min.css
website/js/: bootstrap.min.js  jquery.easing.min.js  theme.js
